# EmbodiedStressBench

./: .env.local.example  .gitignore  CITATION.cff  CODEX_DAILY_PROMPTS.md  CODEX_MASTER_PROMPT.md  CONSTRAINTS.md  PROJECT_PLAN.md  README.md  README_REPRODUCIBILITY.md  pyproject.toml  requirements.txt
docs/: EXPERIMENT_LOG.md  H200_WORKFLOW.md  IEEE_ACCESS_POSITIONING.md  QUERY_TO_GRASP_INTEGRATION.md  REVIEWER_SELF_AUDIT.md  SCIREP_CLAIM_EVIDENCE.md  artifact_checklist_ieee_access.md  claim_evidence_table_scientific_reports.md  ieee_access_claim_evidence_audit.md  ieee_access_reviewer_risk_matrix.md  json_schema_example.md  related_work_expansion_todo.md  repo_inventory_for_ieee_access.md  scientific_reports_experiment_status.md  scientific_reports_result_to_claim.md  scirep_data_code_release_checklist.md
embodied_stressbench/: types.py
paper/: main.tex  references.bib
scientific_reports_revision_20260521/: chatgpt_pro_review_prompt_20260523.md  curated_commit_tag_release_20260523.ps1  external_rgbd_by_object.csv  external_rgbd_by_scene.csv  external_rgbd_detector_threshold_sensitivity_note.md  external_rgbd_validation_claim_note.md  final_scirep_revision_report.md  git_push_scirep_fixes_20260523.ps1  main_diagnostic_summary.csv  pdf_page_audit_20260523.md  qualitative_case_manifest.csv  query_ablation_audit.md  scirep_open_vocab_detector_transfer_combined.csv
scripts/: analyze_closed_loop_sanity.py  analyze_open_vocab_detector_bridge.py  analyze_ycbv_external_rgbd_probe.py  audit_output_integrity.py  build_ieee_access_pdf.ps1  build_scirep_release_package.py  (+52 more)
(+202 files in other folders)
